--- a/src/Styles/print.css
+++ b/src/Styles/print.css
@@ -1,35 +1,44 @@
-.printDiv {
-    position: absolute;
-    padding-top: 70px;
-    left: 50%;
-    transform: translate(-50%);
-    width: 50%;
-}
 
-.printTable {
-    position: relative;
-}
+    .printDiv {
+        position: absolute;
+        padding-top: 70px;
+        left: 50%;
+        transform: translate(-50%);
+        width: 80%;
+    }
+    .printTable {
+        position: relative;
+    }
+    th, td {
+        border: 1px solid #000;
+        padding: 0.75rem;
+        text-align: left;
+        font-size: 20px;
+    }
+    th {
+        font-weight: bold;
+        white-space: nowrap;
+        background: #000;
+    }
+    .printBtn2 {
+        position: fixed;
+        width: 40px;
+        height: 40px;
+        bottom: 5%;
+        right: 5.8%;
+        background-image: url('../pictures/print.png');
+        background-size: 34px 34px;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 50% !important;
+        border: grey;
+        z-index: 100000;
+    }
+    .printingBtn {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
 
-.iframe {
-    position: absolute;
-    top: 250px;
-    height: 100%;
-    width: 100%;
-    background-color: green;
-    left: 0%;
-    font-size: 20px;
-    text-align: left !important;
-    border: solid black 5px;
-}
 
-th, td {
-    border: 1px solid #000;
-    padding: 0.75rem;
-    text-align: left;
-    font-size: 20px;
-}
-th {
-    font-weight: bold;
-    white-space: nowrap;
-    background: #000;
-}
